--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -41,6 +41,8 @@ fonts/open-sans-bold.woff: fonts/open-sans-bold.woff
 fonts/open-sans-bold/index.woff: fonts/open-sans-bold.woff
 fonts/open-sans.woff: fonts/open-sans.woff
 fonts/open-sans/index.woff: fonts/open-sans.woff
+publify.css: publify.css
+publify/index.css: publify.css
 jquery-ui/animated-overlay.gif: jquery-ui/animated-overlay.gif
 jquery-ui/animated-overlay/index.gif: jquery-ui/animated-overlay.gif
 jquery-ui/ui-bg_flat_0_aaaaaa_40x100.png: jquery-ui/ui-bg_flat_0_aaaaaa_40x100.png
